--- a/flask/manage_user/templates/get_user.html
+++ b/flask/manage_user/templates/get_user.html
@@ -1,23 +1,31 @@
-<!doctype hml>
+{% extends "layout.html" %}
 {% block body %}
  {% for message in get_flashed_messages() %}
         <h1>{{ message }}</h1>
  {% endfor %}
 
 {% if user %}
- <form action="{{ url_for('edit_user', user_id=user.user_id) }}" method="post">
-        <dl>
-            <dt>UserName:
-            <dd><input type="text" size=30 name="user_name" value={{ user.user_name }}>
-            <dt>FirstName:
-            <dd><input type="text" name="first_name" size="30" value={{ user.first_name }}>
-            <dt>LastName:
-            <dd><input type="text" name="last_name" size="30" value={{ user.last_name }} >
-            <dt>Email:
-            <dd><input type="text" name="email" size="30" value={{ user.email }}>
-            <dd><input type="submit" value="Edit User">
-        </dl>
+<div class="container">
+ <form role="form" action="{{ url_for('edit_user', user_id=user.user_id) }}" method="post">
+	<div class="form-group">
+            <label for="user_name">UserName:</label>
+            <input type="text" size=30 name="user_name" id="user_name" class="form-control" value={{ user.user_name }}>
+	</div>
+	<div class="form-group">
+            <label for="first_name">FirstName:</label>
+            <input type="text" name="first_name" size="30" id="first_name" class="form-control" value={{ user.first_name }}>
+	</div>
+	<div class="form-group">
+            <label for="last_name">LastName:</label>
+            <input type="text" name="last_name" size="30" id="last_name" class="form-control" value={{ user.last_name }} >
+	</div>
+	<div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" class="form-control" size="30" value={{ user.email }}>
+	</div>
+            <button type="submit" class="btn btn-default">Edit User</button>
     </form>
+</div>
 {% else %}
 <h3>
 	NO user
