--- a/flask/manage_user/templates/list_user.html
+++ b/flask/manage_user/templates/list_user.html
@@ -1,19 +1,19 @@
 {% extends "layout.html" %}
 {% block body %}
 <h2>USER LIST</h2>
-   <ul>
-    {% for user in users %}
-	<li>
-		<ul>
-			<li> First Name: {{ user.first_name }} </li>
- 			<li> Last Name: {{ user.last_name }} </li>
-			<li> User Name: {{ user.user_name }} </li>
-			<li> Password: {{ user.password }} </li>
-			<li> Email: {{ user.email }} </li>
+   {% for user in users %}
+   <ul class="list-group">
+	<li class="list-group-item"> 
+		<ul class="list-group">
+			<li class="list-group-item"> First Name: {{ user.first_name }} </li>
+ 			<li class="list-group-item"> Last Name: {{ user.last_name }} </li>
+			<li class="list-group-item"> User Name: {{ user.user_name }} </li>
+			<li class="list-group-item"> Password: {{ user.password }} </li>
+			<li class="list-group-item"> Email: {{ user.email }} </li>
 		</ul>
-	</li>
-    {% else %}
-     No user
-    {% endfor %}
+	</li> 
 </ul>
+   {% else %}
+ 	No User
+   {% endfor %}
 {% endblock %}
