--- a/flask/manage_user/templates/create_user_form.html
+++ b/flask/manage_user/templates/create_user_form.html
@@ -1,4 +1,3 @@
-{% extends "layout.html" %}
 {% block body %}
 
  {% for message in get_flashed_messages() %}
@@ -30,4 +29,10 @@
             <button type="submit" class="btn btn-default">Create User</button>
     </form>
 </div>
+<script>
+    $("form").submit(function(e){
+        e.preventDefault()
+        console.log("click here") 
+    }); 
+</script>
 {% endblock %}
