--- a/flask/manage_user/templates/layout.html
+++ b/flask/manage_user/templates/layout.html
@@ -8,4 +8,6 @@
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
+<div id="result">
+</div>
 {% block body %}{% endblock %}
