--- a/flask/manage_user/templates/get_user.html
+++ b/flask/manage_user/templates/get_user.html
@@ -1,4 +1,3 @@
-{% extends "layout.html" %}
 {% block body %}
  {% for message in get_flashed_messages() %}
         <h1>{{ message }}</h1>
@@ -6,7 +5,7 @@
 
 {% if user %}
 <div class="container">
- <form role="form" action="{{ url_for('edit_user', user_id=user.user_id) }}" method="post">
+ <form id="edit_form" role="form" action="{{ url_for('edit_user', user_id=user.user_id) }}" method="post">
 	<div class="form-group">
             <label for="user_name">UserName:</label>
             <input type="text" size=30 name="user_name" id="user_name" class="form-control" value={{ user.user_name }}>
@@ -31,4 +30,34 @@
 	NO user
 </h3>
 {% endif %}
+<script>
+    $(document).ready(function(){
+        $("form").submit(function(e){
+            e.preventDefault();
+            $.ajax({
+                dataType: "json",
+                type: "POST",
+                data: $("form").serialize(),
+                url: "{{ url_for('edit_user', user_id=user.user_id) }}",
+                success: function(data){
+                    $("#result").removeClass().attr("class", "alert alert-success").html(data.result).show().fadeOut(5000);
+                    $("#edit_form_modal").modal("hide");
+                    var jsonData={}
+                    var data = $("form").serializeArray();
+                    $.each(data, function(){
+                        jsonData[this.name] = this.value;
+                    });
+                    var row_index = $("#edit_form_modal").attr("current_edit_row_index");
+                    console.log(row_index);
+                    console.log(jsonData);
+                    $("#user_list").bootstrapTable({});
+                    $("#user_list").bootstrapTable('updateRow', {
+                            'index': row_index,
+                            'row': jsonData
+                    });                                                            
+                }
+            })
+        });
+      });
+</script>
 {% endblock %}
