--- a/flask/manage_user/templates/table_user.html
+++ b/flask/manage_user/templates/table_user.html
@@ -1,24 +1,26 @@
 {% block body %}
 <h2>USER LIST</h2>
-        <table class="table table-hover">
+        <table id="user_list" class="table table-hover">
             <thead>
-                <th>User Name</th>
-                <th>Password</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
+                <tr>
+                <th data-field="user_name">User Name</th>
+                <th data-field="first_name">First Name</th>
+                <th data-field="last_name">Last Name</th>
+                <th data-field="email">Email</th>
                 <th>Tools</th>
+                </tr>
             </thead>
             <tbody>
+            {% set row_index=0 %}
             {% for user in users %}
+                {% set row_index = row_index + 1 %}
                 <tr>
                     <td>{{ user.user_name }}</td>
-                    <td>{{ user.password }}</td>
                     <td>{{ user.first_name }}</td>
                     <td>{{ user.last_name }}</td>
                     <td>{{ user.email }}</td>
                     <td>
-                        <a class="btn btn-info btn-sm edit_user" user_id="{{ user.user_id }}">
+                        <a class="btn btn-info btn-sm edit_user" user_id="{{ user.user_id }}" row_index="{{ row_index }}">
                             <span class="glyphicon glyphicon-pencil"></span>EDIT
                         </a>                        
                         <a class="btn btn-info btn-sm delete_user" user_id="{{ user.user_id }}">
@@ -29,11 +31,41 @@
             {% endfor %}
             </tbody>
         </table>
+
+<div class="modal fade" id="edit_form_modal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit User</h4>
+            </div>
+            <div class="modal-body">
+                <p>NOTHING TO SHOW</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>  
+    </div>
+</div>
+
 <script>
     $(document).ready(function(){
         $(".edit_user").click(function(e){
             console.log("get user by id to edit");
             e.preventDefault();
+            modal_frm=$("#edit_form_modal");
+            // open dialog
+            modal_frm.modal("show"); 
+            // load edit form into dialog
+            item=$(this) 
+            user_id = item.attr("user_id");
+            modal_frm.attr("current_edit_row_index", item.attr("row_index"));
+            modal_frm.find('.modal-body').load("/user/get/?user_id=" + user_id);
+
+            // edit return back to table
+            
+            // update table
         });
 
         $(".delete_user").click(function(e){ 
