--- a/flask/manage_user/templates/table_user.html
+++ b/flask/manage_user/templates/table_user.html
@@ -3,24 +3,22 @@
         <table id="user_list" class="table table-hover">
             <thead>
                 <tr>
-                <th data-field="user_name">User Name</th>
-                <th data-field="first_name">First Name</th>
-                <th data-field="last_name">Last Name</th>
-                <th data-field="email">Email</th>
+                <th>User Name</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
                 <th>Tools</th>
                 </tr>
             </thead>
             <tbody>
-            {% set row_index=0 %}
             {% for user in users %}
-                {% set row_index = row_index + 1 %}
-                <tr>
-                    <td>{{ user.user_name }}</td>
-                    <td>{{ user.first_name }}</td>
-                    <td>{{ user.last_name }}</td>
-                    <td>{{ user.email }}</td>
+                <tr row_id="row-{{ user.user_id }}">
+                    <td field="user_name">{{ user.user_name }}</td>
+                    <td field="first_name">{{ user.first_name }}</td>
+                    <td field="last_name">{{ user.last_name }}</td>
+                    <td field="email">{{ user.email }}</td>
                     <td>
-                        <a class="btn btn-info btn-sm edit_user" user_id="{{ user.user_id }}" row_index="{{ row_index }}">
+                        <a class="btn btn-info btn-sm edit_user" user_id="{{ user.user_id }}">
                             <span class="glyphicon glyphicon-pencil"></span>EDIT
                         </a>                        
                         <a class="btn btn-info btn-sm delete_user" user_id="{{ user.user_id }}">
@@ -42,9 +40,6 @@
             <div class="modal-body">
                 <p>NOTHING TO SHOW</p>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
         </div>  
     </div>
 </div>
@@ -60,12 +55,7 @@
             // load edit form into dialog
             item=$(this) 
             user_id = item.attr("user_id");
-            modal_frm.attr("current_edit_row_index", item.attr("row_index"));
             modal_frm.find('.modal-body').load("/user/get/?user_id=" + user_id);
-
-            // edit return back to table
-            
-            // update table
         });
 
         $(".delete_user").click(function(e){ 
