--- a/flask/manage_user/templates/get_user.html
+++ b/flask/manage_user/templates/get_user.html
@@ -4,7 +4,6 @@
  {% endfor %}
 
 {% if user %}
-<div class="container">
  <form id="edit_form" role="form" action="{{ url_for('edit_user', user_id=user.user_id) }}" method="post">
 	<div class="form-group">
             <label for="user_name">UserName:</label>
@@ -24,7 +23,6 @@
 	</div>
             <button type="submit" class="btn btn-default">Edit User</button>
     </form>
-</div>
 {% else %}
 <h3>
 	NO user
@@ -42,19 +40,19 @@
                 success: function(data){
                     $("#result").removeClass().attr("class", "alert alert-success").html(data.result).show().fadeOut(5000);
                     $("#edit_form_modal").modal("hide");
-                    var jsonData={}
-                    var data = $("form").serializeArray();
-                    $.each(data, function(){
-                        jsonData[this.name] = this.value;
-                    });
-                    var row_index = $("#edit_form_modal").attr("current_edit_row_index");
-                    console.log(row_index);
-                    console.log(jsonData);
-                    $("#user_list").bootstrapTable({});
-                    $("#user_list").bootstrapTable('updateRow', {
-                            'index': row_index,
-                            'row': jsonData
-                    });                                                            
+                    var $tr = $("tr[row_id='row-{{ user.user_id }}']");
+                    var user_name = $("form").find("input[name='user_name']").val();
+                    $tr.find("td[field='user_name']").text(user_name);
+                    var first_name = $("form").find("input[name='first_name']").val();
+                    $tr.find("td[field='first_name']").text(user_name);
+                    var last_name = $("form").find("input[name='last_name']").val();
+                    $tr.find("td[field='last_name']").text(user_name);
+                    var user_name = $("form").find("input[name='email']").val();
+                    $tr.find("td[field='email']").text(user_name);
+                    $tr.addClass("success");
+                    setTimeout(function(){
+                        $tr.removeClass("success");
+                    }, 2000);
                 }
             })
         });
