--- a/flask/manage_user/templates/index.html
+++ b/flask/manage_user/templates/index.html
@@ -7,7 +7,7 @@
             <li class="sidebar-brand">
                 <a href="#">User Management</a>
             </li>
-            <li><a href="#">Home</a></li>
+            <li><a href="/index">Home</a></li>
             <li><a id="list_user" href="#">List User</a></li>
             <li><a id="create_user" href="#">Create New User</a></li>
         </ul>
